refactor: remove recompute_quantity
